// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessListPage component tests Snapshot tests for no status selected 1`] = `
<EmptyState
  variant="full"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        color="var(--pf-global--warning-color--100)"
        icon={[Function]}
      >
        <ExclamationTriangleIcon
          aria-hidden="true"
          className="pf-c-empty-state__icon"
          color="var(--pf-global--warning-color--100)"
        >
          <MockedComponent />
        </ExclamationTriangleIcon>
      </EmptyStateIcon>
      <Title
        headingLevel="h5"
        size="lg"
      >
        <h5
          className="pf-c-title pf-m-lg"
        >
          No status is selected
        </h5>
      </Title>
      <EmptyStateBody>
        <div
          className="pf-c-empty-state__body"
        >
          Try selecting at least one status to see results
        </div>
      </EmptyStateBody>
      <Button
        onClick={[Function]}
        variant="link"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link"
          data-ouia-component-id={293}
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reset to default
        </button>
      </Button>
    </div>
  </div>
</EmptyState>
`;

exports[`ProcessListPage component tests error in query - with businesskey 1`] = `
<EmptyState
  variant="full"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        color="var(--pf-global--danger-color--100)"
        icon={[Function]}
      >
        <ExclamationCircleIcon
          aria-hidden="true"
          className="pf-c-empty-state__icon"
          color="var(--pf-global--danger-color--100)"
        >
          <MockedComponent />
        </ExclamationCircleIcon>
      </EmptyStateIcon>
      <Title
        headingLevel="h1"
        size="4xl"
      >
        <h1
          className="pf-c-title pf-m-4xl"
        >
          Error fetching data
        </h1>
      </Title>
      <EmptyStateBody>
        <div
          className="pf-c-empty-state__body"
        >
          An error occurred while accessing data.
           
          <Button
            id="display-error"
            isInline={true}
            onClick={[Function]}
            variant="link"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id={272}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              id="display-error"
              onClick={[Function]}
              type="button"
            >
              See more details
            </button>
          </Button>
        </div>
      </EmptyStateBody>
      <Button
        id="goback-button"
        onClick={[Function]}
        variant="primary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-primary"
          data-ouia-component-id={273}
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="goback-button"
          onClick={[Function]}
          type="button"
        >
          Go back
        </button>
      </Button>
    </div>
  </div>
</EmptyState>
`;

exports[`ProcessListPage component tests error in query - without businesskey 1`] = `
<EmptyState
  variant="full"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        color="var(--pf-global--danger-color--100)"
        icon={[Function]}
      >
        <ExclamationCircleIcon
          aria-hidden="true"
          className="pf-c-empty-state__icon"
          color="var(--pf-global--danger-color--100)"
        >
          <MockedComponent />
        </ExclamationCircleIcon>
      </EmptyStateIcon>
      <Title
        headingLevel="h1"
        size="4xl"
      >
        <h1
          className="pf-c-title pf-m-4xl"
        >
          Error fetching data
        </h1>
      </Title>
      <EmptyStateBody>
        <div
          className="pf-c-empty-state__body"
        >
          An error occurred while accessing data.
           
          <Button
            id="display-error"
            isInline={true}
            onClick={[Function]}
            variant="link"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id={212}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              id="display-error"
              onClick={[Function]}
              type="button"
            >
              See more details
            </button>
          </Button>
        </div>
      </EmptyStateBody>
      <Button
        id="goback-button"
        onClick={[Function]}
        variant="primary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-primary"
          data-ouia-component-id={213}
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="goback-button"
          onClick={[Function]}
          type="button"
        >
          Go back
        </button>
      </Button>
    </div>
  </div>
</EmptyState>
`;
